fix: fix dropdown to take into account parent's hidden overflow

--- a/src/week-3-react/react-portal/Dropdown/Dropdown.module.css
+++ b/src/week-3-react/react-portal/Dropdown/Dropdown.module.css
@@ -17,7 +17,7 @@
 
 .dropdownContent {
     position: absolute;
-    width: 100%;
+    width: 200px;
 }
 
 .dropdownList {
